<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="string_local_music">本地音乐</string>
    <string name="string_list">歌单</string>
    <string name="scan_music">扫描音乐</string>
    <string name="add_music">添加音乐</string>
    <string name="add_list">添加歌单</string>
    <string name="menu">菜单</string>
    <string name="sum_music">总计：</string>
    <string name="doing_scan">正在扫描……</string>
    <string name="music_name_default">歌曲</string>
    <string name="singer_default">歌手</string>
    <string name="bt_search">搜索</string>
    <string name="txt_sd">SD卡</string>
    <string name="no_files">没有文件</string>
    <string name="to_top">[……]</string>
    <string name="delete_music">删除所有音乐</string>

</resources>
