<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.68"
            android:gravity="center_vertical" >

            <RadioGroup
                android:id="@+id/radioGroup_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_local_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_music"
                    android:text="@string/string_local_music"
                    android:textColor="@drawable/rb_txtcolor" />

                <RadioButton
                    android:id="@+id/radio_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableTop="@drawable/ic_list"
                    android:gravity="center"
                    android:text="@string/string_list"
                    android:textColor="@drawable/rb_txtcolor" />
            </RadioGroup>

            <Button
                android:id="@+id/bt_main_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="20dp"
                android:background="@null"
                android:text="@string/menu"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textView_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/iv_playmode"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/iv_playmode"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/image" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/fg_container"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="8" >
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_main_play_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_music" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="10dp"
                    android:orientation="vertical" >

                    <SeekBar
                        android:id="@+id/seekBar_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxHeight="1dp"
                        android:progressDrawable="@drawable/seekbar_process"
                        android:thumb="@drawable/shape_point_circular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="6" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/textView_musicname"
                            android:layout_width="106dp"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:singleLine="true"
                            android:text="@string/music_name_default" />

                        <TextView
                            android:id="@+id/textView_singer"
                            android:layout_width="98dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:singleLine="true"
                            android:text="@string/singer_default" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="138dp"
                        android:layout_height="match_parent" >

                        <ImageView
                            android:id="@+id/imageButton_play"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignTop="@+id/imageButton_next"
                            android:layout_marginRight="20dp"
                            android:layout_toLeftOf="@+id/imageButton_next"
                            android:src="@drawable/ic_play" />

                        <ImageView
                            android:id="@+id/imageButton_next"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginRight="8dp"
                            android:src="@drawable/ic_next" />

                        <ImageView
                            android:id="@+id/imageButton_before"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:src="@drawable/ic_before" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>